--- a/apps/frontend/Pages/Public/PublicLayout.razor
+++ b/apps/frontend/Pages/Public/PublicLayout.razor
@@ -1,7 +1,8 @@
 @inherits LayoutComponentBase
 @namespace frontend.Pages.Public
 @using frontend.Pages.Shared
-    
+@using MudBlazor
+
 <div class="flex flex-col min-h-screen pt-12">
     @Body
 </div>
